# hina

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  package.json  prek.toml
.github/workflows/: deploy-docs.yml  release-agent.yml  release-server.yml
apps/docs/: astro.config.mjs  package.json
apps/docs/src/components/: TagShowcase.tsx
apps/server/: cli.ts  drizzle.config.ts  package.json  tsconfig.json
apps/server/drizzle/: 0000_greedy_talos.sql
apps/server/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/server/src/: app.ts  config.ts  index.ts  paths.ts  version-check.ts  version.ts
apps/server/src/agents/: groups.ts  registry.test.ts  registry.ts
apps/server/src/alert/: constants.ts  index.ts  selector.ts  types.ts
apps/server/src/auth/: bootstrap.ts  cleanup.test.ts  cleanup.ts  login-attempts.test.ts  login-attempts.ts  password.ts  revalidation.test.ts  session.ts  (+2 more)
apps/web/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  i18n.ts  index.css  main.tsx
apps/web/tests/: admin-live.test.ts  agentMetrics.test.ts  latency-series.test.ts  user-errors.test.ts
crates/hina-agent/: Cargo.toml
crates/hina-agent/src/: collector.rs  config.rs  ip_resolve.rs  main.rs  net_filter.rs  probe.rs  protocol.rs  tls.rs  updater.rs  ws_client.rs
crates/hina-agent/src/probe/: http.rs  icmp.rs  outcome.rs  runner.rs  task.rs  tcp.rs  tests.rs  traceroute.rs
scripts/: build-release.sh  install-agent.sh  install.sh
(+300 files in other folders)
